<resources>
    <string name="app_name">Tutor Scheduling</string>
    <string name="new_customer">New Customer</string>
    <string name="existing_customer">Existing Customer</string>
    <string name="logged_in">Logged in: JDOE</string>
    <string name="new_session">Schedule New Session</string>
    <string name="upcoming_session">View Upcoming Sessions</string>
    <string name="logout_now">Log Out</string>
    <string name="login_now">Log In</string>
    <string name="new_name">Enter Name</string>
    <string name="guest_login">Guest</string>
    <string name="title_activity_sessions">Sessions</string>
    <string name="action_settings">Settings</string>
    <string name="logout_menu">Logout</string>
    <string name="home_menu">Home</string>
    <string name="title_activity_login">Sign in</string>



    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>



</resources>
