<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/logged_in" />
    <Button
        android:id="@+id/logout_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/logout_now"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

        <Button
            android:id="@+id/new_customer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/new_customer"/>
        <Button
            android:id="@+id/existing_customer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/existing_customer"/>
        <Button
            android:id="@+id/new_session"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/new_session"/>
        <Button
            android:id="@+id/upcoming_session"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_session"/>



    </LinearLayout>


</LinearLayout>

